--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1045,6 +1045,149 @@ a {
 .cid-sXmb3y1B1x H6 {
   text-align: center;
 }
+.cid-sXmmZpDeOa {
+  padding-top: 0rem;
+  padding-bottom: 0rem;
+  background: #ffffff;
+}
+.cid-sXmmZpDeOa .team-card {
+  margin-bottom: 2rem;
+  transition: all 0.3s;
+}
+.cid-sXmmZpDeOa .team-card:hover {
+  transform: translateY(-10px);
+}
+.cid-sXmmZpDeOa .card-wrap {
+  background: #ffffff;
+  border-radius: 4px;
+}
+@media (max-width: 991px) {
+  .cid-sXmmZpDeOa .card-wrap {
+    margin-bottom: 2rem;
+  }
+}
+.cid-sXmmZpDeOa .card-wrap .image-wrap img {
+  width: 100%;
+}
+@media (min-width: 768px) {
+  .cid-sXmmZpDeOa .card-wrap .content-wrap {
+    padding: 2rem;
+  }
+}
+@media (max-width: 767px) {
+  .cid-sXmmZpDeOa .card-wrap .content-wrap {
+    padding: 1rem;
+  }
+}
+.cid-sXmmZpDeOa .social-row {
+  text-align: center;
+}
+.cid-sXmmZpDeOa .social-row .soc-item {
+  display: inline-block;
+  text-align: center;
+  border-radius: 50%;
+  margin-right: 0.6rem;
+  margin-bottom: 1rem;
+  padding: 0.5rem;
+  border: 2px solid #6592e6;
+  transition: all 0.3s;
+}
+.cid-sXmmZpDeOa .social-row .soc-item .mbr-iconfont {
+  transition: all 0.3s;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  color: #6592e6;
+  font-size: 1.5rem;
+}
+.cid-sXmmZpDeOa .social-row .soc-item:hover {
+  background-color: #6592e6;
+}
+.cid-sXmmZpDeOa .social-row .soc-item:hover .mbr-iconfont {
+  color: #ffffff;
+}
+.cid-sXmmZpDeOa .embla__slide {
+  display: flex;
+  justify-content: center;
+  position: relative;
+  min-width: 410px;
+  max-width: 410px;
+}
+@media (max-width: 768px) {
+  .cid-sXmmZpDeOa .embla__slide {
+    min-width: 70%;
+    max-width: initial;
+    margin-left: 1rem !important;
+    margin-right: 1rem !important;
+  }
+}
+.cid-sXmmZpDeOa .embla__button--next,
+.cid-sXmmZpDeOa .embla__button--prev {
+  display: flex;
+}
+.cid-sXmmZpDeOa .embla__button {
+  top: 50%;
+  width: 60px;
+  height: 60px;
+  margin-top: -1.5rem;
+  font-size: 22px;
+  background-color: rgba(0, 0, 0, 0.5);
+  color: #fff;
+  border: 2px solid #fff;
+  border-radius: 50%;
+  transition: all 0.3s;
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+@media (max-width: 768px) {
+  .cid-sXmmZpDeOa .embla__button {
+    display: none;
+  }
+}
+.cid-sXmmZpDeOa .embla__button:disabled {
+  cursor: default;
+  display: none;
+}
+.cid-sXmmZpDeOa .embla__button:hover {
+  background: #000;
+  color: rgba(255, 255, 255, 0.5);
+}
+.cid-sXmmZpDeOa .embla__button.embla__button--prev {
+  left: 0;
+  margin-left: 2.5rem;
+}
+.cid-sXmmZpDeOa .embla__button.embla__button--next {
+  right: 0;
+  margin-right: 2.5rem;
+}
+@media (max-width: 767px) {
+  .cid-sXmmZpDeOa .embla__button {
+    top: auto;
+  }
+}
+.cid-sXmmZpDeOa .embla {
+  position: relative;
+  width: 100%;
+}
+.cid-sXmmZpDeOa .embla__viewport {
+  overflow: hidden;
+  width: 100%;
+}
+.cid-sXmmZpDeOa .embla__viewport.is-draggable {
+  cursor: grab;
+}
+.cid-sXmmZpDeOa .embla__viewport.is-dragging {
+  cursor: grabbing;
+}
+.cid-sXmmZpDeOa .embla__container {
+  display: flex;
+  user-select: none;
+  -webkit-touch-callout: none;
+  -khtml-user-select: none;
+  -webkit-tap-highlight-color: transparent;
+}
 .cid-sVgDtdAJL7 {
   z-index: 1000;
   width: 100%;
@@ -1404,4 +1547,23 @@ a {
     max-width: calc(100% + 2rem);
     left: -1rem;
   }
+}
+.cid-sXmm93JaJK {
+  padding-top: 6rem;
+  padding-bottom: 6rem;
+  background-color: #ffffff;
+}
+.cid-sXmm93JaJK .video-wrapper iframe {
+  width: 100%;
+}
+.cid-sXmm93JaJK .mbr-section-title,
+.cid-sXmm93JaJK .mbr-section-subtitle,
+.cid-sXmm93JaJK .mbr-text {
+  text-align: center;
+}
+.cid-sXmmfCvXn8 {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #232323;
+  overflow: hidden;
 }
