--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -798,7 +798,7 @@ a {
   padding-bottom: 2rem;
 }
 .cid-sXmb3y1B1x .item-wrapper {
-  height: 100%;
+  height: 300px;
   position: relative;
 }
 .cid-sXmb3y1B1x .item-wrapper img {
