--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -926,6 +926,11 @@ a {
 .cid-sYoQN4xqey .navbar.collapsed.opened .dropdown-menu {
   top: 0;
 }
+@media (min-width: 992px) {
+  .cid-sYoQN4xqey .navbar.collapsed.opened:not(.navbar-short) .navbar-collapse {
+    max-height: calc(98.5vh - 3rem);
+  }
+}
 .cid-sYoQN4xqey .navbar.collapsed .dropdown-menu .dropdown-submenu {
   left: 0 !important;
 }
@@ -1601,6 +1606,27 @@ a {
   opacity: 1;
   background: #000;
   color: #fff;
+}
+.cid-sYp3qdpKj3 {
+  padding-top: 6rem;
+  padding-bottom: 6rem;
+  background-color: #ffffff;
+}
+.cid-sYp3qdpKj3 .mbr-overlay {
+  background-color: #ffffff;
+  opacity: 0.4;
+}
+.cid-sYp3qdpKj3 form .mbr-section-btn {
+  text-align: center;
+  width: 100%;
+}
+.cid-sYp3qdpKj3 form .mbr-section-btn .btn {
+  display: inline-flex;
+}
+@media (max-width: 991px) {
+  .cid-sYp3qdpKj3 form .mbr-section-btn .btn {
+    width: 100%;
+  }
 }
 .cid-sYoR6kahRe {
   padding-top: 30px;
